--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Cambio 1</title>
+    <title>Cambio 2</title>
     <meta name='description' content='Descripción Página, Palabras Claves'>
     <meta name='robots' content='index, follow'>
     <meta name='author' content='Emmanuel Sierra'>
@@ -24,6 +24,12 @@
     </div>
 
     <div id="action"></div>
+
+    <h3 class="titulo-secundario">Titulo Secundario</h3>
+
+    <p class="texto-general">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas laboriosam, culpa ipsam autem
+        quaerat excepturi
+        eaque velit porro quis perferendis atque fugit cum iure deleniti, temporibus hic omnis. Facere, deserunt.</p>
 
 
     <!-- JAVASCRIPT -->
